media/error_tc/error_238.txt
G:\SEM-7\ADF\FINAL PROJECT\AlgoBooth\media\source_codes/code_IlStbjb.cpp: In function 'int main()':
G:\SEM-7\ADF\FINAL PROJECT\AlgoBooth\media\source_codes/code_IlStbjb.cpp:8:1: error: expected ';' before '}' token
 }
 ^
